# Real-Time-Communication-Platform

./: CMakeLists.txt  README.md  imgui.ini  massif.out.17087
DummyClient/: CMakeLists.txt
DummyClient/src/: main.cpp
MonitoringServer/: CMakeLists.txt
MonitoringServer/src/: main.cpp
Server/: CMakeLists.txt
Server/src/: main.cpp
ServerCore/: CMakeLists.txt
ServerCore/include/: Acceptor.hpp  Allocator.hpp  BinaryReader.hpp  BinaryWriter.hpp  ByteSwap.hpp  Common.hpp  Enums.hpp  GlobalContext.hpp  Lock.hpp  Logger.hpp  Math.hpp  MemoryPool.hpp  NetworkAddress.hpp  NetworkCore.hpp  NetworkDispatcher.hpp  NetworkEngine.hpp  NetworkEvent.hpp  NetworkInterface.hpp  NetworkUtils.hpp  SendBuffer.hpp  SendBufferPool.hpp  Session.hpp  SessionManager.hpp  StreamBuffer.hpp  ThreadLocal.hpp  ThreadManager.hpp  Types.hpp
ServerCore/src/: Acceptor.cpp  Allocator.cpp  BinaryReader.cpp  BinaryWriter.cpp  GlobalContext.cpp  Lock.cpp  Logger.cpp  MemoryPool.cpp  NetworkAddress.cpp  NetworkCore.cpp  NetworkDispatcher.cpp  NetworkEngine.cpp  NetworkEvent.cpp  NetworkInterface.cpp  NetworkUtils.cpp  SendBuffer.cpp  SendBufferPool.cpp  Session.cpp  SessionManager.cpp  StreamBuffer.cpp  ThreadLocal.cpp  ThreadManager.cpp
apps/client/: CMakeLists.txt
apps/client/include/: AuthToken.h  Messenger.h  PacketDispatcher.h  PacketHandler.h  Pch.h  ServerSession.h
apps/client/src/: AuthToken.cpp  Messenger.cpp  PacketHandler.cpp  ServerSession.cpp  main.cpp
apps/gameclient/: CMakeLists.txt
apps/gameclient/include/: Pch.h  ServerSession.h  ServerSession.hpp
apps/gameclient/src/: ServerSession.cpp  main.cpp
apps/gameserver/: CMakeLists.txt
apps/gameserver/include/: ClientSession.h  ClientSession.hpp  Pch.h  Pch.hpp  SessionManager.hpp  World.h
apps/gameserver/src/: ClientSession.cpp  SessionManager.cpp  World.cpp  main.cpp
apps/server/: CMakeLists.txt
apps/server/data/: auth.db  auth.db-shm  auth.db-wal
apps/server/db/: schema_auth.sql
apps/server/include/: AuthDb.h  AuthService.h  ClientSession.h  DbWorker.h  PacketHandler.h  Pch.h  Protocol.h  SQLiteStmt.h  SqliteDb.h  World.h
apps/server/src/: AuthDb.cpp  AuthService.cpp  ClientSession.cpp  DbWorker.cpp  PacketDispatcher.cpp  PacketHandler.cpp  SQLiteDb.cpp  SQLiteStmt.cpp  World.cpp  main.cpp
docs/: MemoryPool.md  SendBufferPool.md
src/engine/: CMakeLists.txt
src/engine/include/engine/: Allocator.hpp  BinaryReader.h  BinaryReader.hpp  BinaryWriter.h  BinaryWriter.hpp  ByteSwap.h  ByteSwap.hpp  CommonType.hpp  EnginePch.h  EnginePch.hpp  EngineTLS.h  EngineTLS.hpp  GlobalContext.h  GlobalContext.hpp  Lock.h  Lock.hpp  Logger.h  Logger.hpp  MemoryPool.h  MemoryPool.hpp  ThreadLocal.hpp  ThreadManager.h  ThreadManager.hpp  ThreadRole.h  ThreadRole.hpp  Time.h
src/engine/src/: Allocator.cpp  BinaryReader.cpp  BinaryWriter.cpp  GlobalContext.cpp  Lock.cpp  Logger.cpp  MemoryPool.cpp  ThreadLocal.cpp  ThreadManager.cpp  Time.cpp
src/gamelogic/: CMakeLists.txt
src/gamelogic/include/gamelogic/: Actor.h  Component.h  GameLogicPch.h  InputComponent.h  MoveComponent.h  Protocol.h  Random.h  Ship.h  Types.h
src/gamelogic/src/: Actor.cpp  Component.cpp  InputComponent.cpp  MoveComponent.cpp  Random.cpp  Ship.cpp
src/network/: CMakeLists.txt
src/network/include/network/: Acceptor.h  Acceptor.hpp  Enums.h  Enums.hpp  NetworkAddress.h  NetworkAddress.hpp  NetworkCore.h  NetworkCore.hpp  NetworkDispatcher.h  NetworkDispatcher.hpp  NetworkEvent.h  NetworkEvent.hpp  NetworkInterface.hpp  NetworkPch.h  NetworkPch.hpp  NetworkUtils.h  NetworkUtils.hpp  PacketDispatcher.h  PacketHeader.h  Protocol.h  SendBuffer.h  SendBufferPool.h  Session.h  Session.hpp  SessionManager.hpp  SessionRegistry.h  SessionRegistry.hpp  StreamBuffer.h  StreamBuffer.hpp  Types.h
src/network/src/: Acceptor.cpp  NetworkAddress.cpp  NetworkCore.cpp  NetworkDispatcher.cpp  NetworkEvent.cpp  NetworkInterface.cpp  NetworkUtils.cpp  PacketDispatcher.cpp  SendBuffer.cpp  SendBufferPool.cpp  Session.cpp  SessionManager.cpp  SessionRegistry.cpp  StreamBuffer.cpp
